--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/VanshikaP/node-db-challenge/issues"
   },
-  "homepage": "https://github.com/VanshikaP/node-db-challenge#readme"
+  "homepage": "https://github.com/VanshikaP/node-db-challenge#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "helmet": "^3.22.0",
+    "knex": "^0.20.15",
+    "sqlite3": "^4.1.1"
+  }
 }
